--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -126,78 +126,78 @@ code {
 
 @font-face {
 	font-family: 'monofur';
-	src: url('/assets/fonts/monofur/monof55.ttf') format('truetype'),
-		url('/assets/fonts/monofur/monof56.ttf') format('truetype');
+	src: url('../assets/fonts/monofur/monof55.ttf') format('truetype'),
+			url('../assets/fonts/monofur/monof56.ttf') format('truetype');
 }
 
 @font-face {
 	font-family: 'e-Ukraine';
-	src: url('assets/fonts/e-Ukraine/e-Ukraine-Bold.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine/e-Ukraine-Bold.otf') format('opentype');
 	font-weight: 700;
 }
 
 @font-face {
 	font-family: 'e-Ukraine';
-	src: url('assets/fonts/e-Ukraine/e-Ukraine-Medium.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine/e-Ukraine-Medium.otf') format('opentype');
 	font-weight: 500;
 }
 
 @font-face {
 	font-family: 'e-Ukraine';
-	src: url('assets/fonts/e-Ukraine/e-Ukraine-Regular.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine/e-Ukraine-Regular.otf') format('opentype');
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: 'e-Ukraine';
-	src: url('assets/fonts/e-Ukraine/e-Ukraine-Light.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine/e-Ukraine-Light.otf') format('opentype');
 	font-weight: 300;
 }
 
 @font-face {
 	font-family: 'e-Ukraine';
-	src: url('assets/fonts/e-Ukraine/e-Ukraine-UltraLight.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine/e-Ukraine-UltraLight.otf') format('opentype');
 	font-weight: 200;
 }
 
 @font-face {
 	font-family: 'e-Ukraine';
-	src: url('assets/fonts/e-Ukraine/e-Ukraine-Thin.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine/e-Ukraine-Thin.otf') format('opentype');
 	font-weight: 100;
 }
 
 @font-face {
 	font-family: 'e-Ukraine Head';
-	src: url('assets/fonts/e-Ukraine Head/e-UkraineHead-Bold.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine Head/e-UkraineHead-Bold.otf') format('opentype');
 	font-weight: 700;
 }
 
 @font-face {
 	font-family: 'e-Ukraine Head';
-	src: url('assets/fonts/e-Ukraine Head/e-UkraineHead-Medium.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine Head/e-UkraineHead-Medium.otf') format('opentype');
 	font-weight: 500;
 }
 
 @font-face {
 	font-family: 'e-Ukraine Head';
-	src: url('assets/fonts/e-Ukraine Head/e-UkraineHead-Regular.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine Head/e-UkraineHead-Regular.otf') format('opentype');
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: 'e-Ukraine Head';
-	src: url('assets/fonts/e-Ukraine Head/e-UkraineHead-Light.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine Head/e-UkraineHead-Light.otf') format('opentype');
 	font-weight: 300;
 }
 
 @font-face {
 	font-family: 'e-Ukraine Head';
-	src: url('assets/fonts/e-Ukraine Head/e-UkraineHead-UltraLight.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine Head/e-UkraineHead-UltraLight.otf') format('opentype');
 	font-weight: 200;
 }
 
 @font-face {
 	font-family: 'e-Ukraine Head';
-	src: url('assets/fonts/e-Ukraine Head/e-UkraineHead-Thin.otf') format('opentype');
+	src: url('../assets/fonts/e-Ukraine Head/e-UkraineHead-Thin.otf') format('opentype');
 	font-weight: 100;
 }
